# recruitments

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.demo.yml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  db.py  demo_seed.py  main.py  models.py  scraping.py  storage.py
backend/app/ai/: agents.py  provider.py  schemas.py
backend/app/models/: __init__.py  aggregates.py  candidate.py  common.py  company.py  cv.py  interview.py  position.py
backend/app/routers/: candidates.py  company.py  interview.py  positions.py
frontend/: .npmrc  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: EditableMarkdown.tsx  Layout.tsx  Markdown.tsx  Stepper.tsx
frontend/src/components/candidate/: CandidateCvCard.tsx  CandidateIdentityCard.tsx  schema.ts  useCandidateForm.ts
frontend/src/components/dashboard/: CandidateLeaderboard.tsx  ComparisonPanel.tsx  ScoreRadar.tsx  WeightsPanel.tsx  score.ts
frontend/src/components/interview/: CustomEvaluations.tsx  InterviewContextCards.tsx  InterviewScoresCard.tsx  InterviewSummaryCard.tsx  criteria.ts  useInterviewForm.ts
frontend/src/components/position/: CandidatesCard.tsx  usePositionForm.ts
frontend/src/i18n/: de.json  en.json  et.json  fr.json  index.ts  nl.json
frontend/src/lib/: api.ts  queries.ts  types.ts
frontend/src/routes/: CandidatePage.tsx  CompanyPage.tsx  DashboardPage.tsx  InterviewPage.tsx  PositionDetail.tsx  PositionList.tsx
(+1 files in other folders)
